--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-        <h1><em>I`m Steven.</em></h1>
+        <h1><em>I`m sanya.</em></h1>
 
         <h2>a <span class="pro">pro</span>grammer.</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img"> 
