--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div class="profile">
         <img src="images/steven.png" alt="steven`s profile img"width=150>
 
-        <h2>Hello.</h2>
-        <p class="intro">I am an ios and Web Developer.I`m the founder and CTO of The App Brewery.I love coffee and brew my own beers.</p>
+        <h2>whatsup.</h2>
+        <p class="intro">I am an ios and Web Developer.I`m the founder and CTO of The App Brewery.I love  coffee and brew my own beers .</p>
       </div>
       <hr>
       <div class="skills">
